syntax = "proto3";

package irrigation;
option go_package = "github.com/LeonardoBeccarini/sdcc_project/grpc/gen/go/irrigation;irrigation";

service DeviceService {
  rpc StartIrrigation(StartRequest) returns (CommandResponse);
  rpc StopIrrigation(StopRequest) returns (CommandResponse);
}

message StartRequest {
  string field_id     = 1;
  string sensor_id    = 2;
  double amount_mm    = 3;
  int32  duration_min = 4;
  string decision_id  = 5; // NEW
}

message StopRequest {
  string field_id  = 1;
  string sensor_id = 2;
}

message CommandResponse {
  bool   success   = 1;
  string message   = 2;
  string ticket_id = 3; // NEW
}

